# pam-phidgetrfid-packaging

./: README  libpam-phidgetrfid_1.0.3-0ubuntu1.dsc  libpam-phidgetrfid_1.0.3-0ubuntu1_source.build  libpam-phidgetrfid_1.0.3-0ubuntu1_source.changes  libpam-phidgetrfid_1.0.3-0ubuntu1_source.ppa.upload  libpam-phidgetrfid_1.0.3-0ubuntu2.dsc  libpam-phidgetrfid_1.0.3-0ubuntu2_source.build  libpam-phidgetrfid_1.0.3-0ubuntu2_source.changes  libpam-phidgetrfid_1.0.3-0ubuntu2_source.ppa.upload  libpam-phidgetrfid_1.0.3-0ubuntu3.dsc  libpam-phidgetrfid_1.0.3-0ubuntu3_source.build  libpam-phidgetrfid_1.0.3-0ubuntu3_source.changes  libpam-phidgetrfid_1.0.3-0ubuntu3_source.ppa.upload  libpam-phidgetrfid_1.0.3-0ubuntu4.dsc  libpam-phidgetrfid_1.0.3-0ubuntu4_source.build  libpam-phidgetrfid_1.0.3-0ubuntu4_source.changes  libpam-phidgetrfid_1.0.3-0ubuntu4_source.ppa.upload  libpam-phidgetrfid_1.0.3-0ubuntu5.dsc  libpam-phidgetrfid_1.0.3-0ubuntu5_source.build  libpam-phidgetrfid_1.0.3-0ubuntu5_source.changes  libpam-phidgetrfid_1.0.3-0ubuntu5_source.ppa.upload  libpam-phidgetrfid_1.0.3-0ubuntu6.dsc  libpam-phidgetrfid_1.0.3-0ubuntu6_source.build  libpam-phidgetrfid_1.0.3-0ubuntu6_source.changes  libpam-phidgetrfid_1.0.3-0ubuntu6_source.ppa.upload  libpam-phidgetrfid_1.0.3-0ubuntu7.dsc  libpam-phidgetrfid_1.0.3-0ubuntu7_source.build  libpam-phidgetrfid_1.0.3-0ubuntu7_source.changes  libpam-phidgetrfid_1.0.4-0ubuntu1.dsc  libpam-phidgetrfid_1.0.4-0ubuntu1_source.build  libpam-phidgetrfid_1.0.4-0ubuntu1_source.changes  libpam-phidgetrfid_1.0.5-0ubuntu1.dsc  libpam-phidgetrfid_1.0.5-0ubuntu1_source.build  libpam-phidgetrfid_1.0.5-0ubuntu1_source.changes  libpam-phidgetrfid_1.0.6-0ubuntu1.dsc  libpam-phidgetrfid_1.0.6-0ubuntu1_amd64.build  libpam-phidgetrfid_1.0.6-0ubuntu1_source.build  libpam-phidgetrfid_1.0.6-0ubuntu1_source.changes  libpam-phidgetrfid_1.0.6-0ubuntu1_source.ppa.upload
libpam-phidgetrfid-1.0.4/: AUTHORS  ChangeLog  NEWS  configure  configure.ac
libpam-phidgetrfid-1.0.4/.pc/: applied-patches
libpam-phidgetrfid-1.0.4/common/: Makefile.am
libpam-phidgetrfid-1.0.4/debian/: changelog  copyright  prerm  (+1 more)
(+55 files in other folders)
